--- a/src/components/utility.css
+++ b/src/components/utility.css
@@ -1,14 +1,26 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Onest:wght@600;700&family=Poppins:wght@400;700&display=swap');
+
+
+
+*,html, body{
+  font-family: 'Onest', sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
 .active{
     /* background-color: hsla(218, 34%, 14%, 1); */
     border-radius: 50%;
- 
     box-shadow: 0 0 16px hsla(207, 90%, 72% , .2);
-
   
 }
 
 nav ul > li {
   padding: 10px;
+}
+
+.head_text_color{
+  color: rgb(170 166 195);
 }
 
 .glass{
@@ -30,7 +42,7 @@ border: 1px solid rgba(45, 23, 107, 0.24);
 }
 .line-gradient{
   background: rgb(119,169,248);
-background: linear-gradient(180deg, rgba(119,169,248,1) 24%, rgba(0,0,0,0) 100%);
+background: linear-gradient(180deg, rgba(119, 169, 248, 0.681) 24%, rgba(0,0,0,0) 100%);
 }
 .btn {
   background: transparent;
@@ -222,11 +234,162 @@ transform: translateY(0);
   height: 100%;
 }
 
-.drop-shadow-lg{
+.header-shadow{
   background-color: hsl(219,48%,8%);
+  filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
 }
 
-@media (min-width: 1280px) {
- 
+.gradient-box{
+  background-color: #4158D0;
+background-image: linear-gradient(0deg, #4158D0 20%, #C850C0 50%, #FFCC70 74%);
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+padding: 2px;
 }
 
+.card-glass{
+  background-color: rgb(21 16 48);
+  background: linear-gradient(to top right, rgb(21 16 48), rgb(58 60 84));
+  background: -webkit-linear-gradient(to top right, rgb(21 16 48), rgba(58,60,84,0.3));
+  color: rgb(151 153 167);
+  box-shadow: 0px 10px 20px 2px rgba(0, 119, 255, 0.1);
+}
+
+.read_more_btn{
+  background: transparent;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  border: none;
+  background: linear-gradient(320deg, rgba(0, 140, 255, 0.678), rgba(128, 0, 128, 0.308));
+  perspective: 30rem;
+  border-radius: 5px;
+  /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.308); */
+}
+
+
+
+.text-animation{
+  display: inline;
+  width: 0;
+  white-space: nowrap; /* Keeps the content on a single line */
+  overflow: hidden;
+  border-right: 2px solid yellow;
+  animation: typing 4s steps(32, end) alternate infinite, blink 1s  steps(2) infinite;
+}
+
+
+.Btn {
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: .4s;
+  cursor: pointer;
+  position: relative;  
+    background: linear-gradient(to right,#434343,#000000);
+  overflow: hidden;
+}
+
+.svgIcon {
+  transition-duration: .3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.text {
+  position: absolute;
+  color: rgb(255, 255, 255);
+  width: 120px;
+  font-weight: 600;
+  opacity: 0;
+  transition-duration: .4s;
+}
+
+.Btn:hover {
+  width: 110px;
+  transition-duration: .4s;
+  border-radius: 30px;
+}
+
+.Btn:hover .text {
+  opacity: 1;
+  transition-duration: .4s;
+}
+
+.Btn:hover .svgIcon {
+  opacity: 0;
+  transition-duration: .3s;
+}
+.modal_bg{
+  /* From https://css.glass */
+background: rgba(21, 16, 48, 0.47);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(6px);
+-webkit-backdrop-filter: blur(6px);
+border: 1px solid rgba(21, 16, 48, 0.01);
+}
+
+
+@keyframes blink {
+0%{
+  border-color: transparent;
+ }100%{
+  border-color: yellow;
+ }
+}
+
+@keyframes typing {
+  0%, 20% { width: 0; }
+  60%, 100% { width: 32ch }
+} 
+
+.custom_shadow{
+  box-shadow: 0px 10px 20px 2px rgba(0, 119, 255, 0.1);
+}
+
+.inner_shadow{
+  box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,  
+  100%, 0.075),
+  /* shadow ring 👇 */
+  0 0 0 1px hsla(0, 0%, 0%, 0.05),
+  /* multiple soft shadows 👇 */
+  0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+  0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
+  0 3.5px 6px hsla(0, 0%, 0%, 0.09);
+}
+
+
+.code-loader {
+  color: #fff;
+  font-family: Consolas, Menlo, Monaco, monospace;
+  font-weight: bold;
+  font-size: 100px;
+  opacity: 0.8;
+}
+
+.code-loader span {
+  display: inline-block;
+  animation: pulse_414 0.4s alternate infinite ease-in-out;
+}
+
+.code-loader span:nth-child(odd) {
+  animation-delay: 0.4s;
+}
+
+@keyframes pulse_414 {
+  to {
+    transform: scale(0.8);
+    opacity: 0.5;
+  }
+}
+
+.name_text{
+  text-shadow: 1px 1px rgb(21, 16, 48), -1px -1px #444;
+}
