--- a/src/components/utility.css
+++ b/src/components/utility.css
@@ -1,55 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Onest:wght@600;700&family=Poppins:wght@400;700&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Onest:wght@600;700&family=Poppins:wght@400;700&display=swap');
-
-
-
-*,html, body{
-  font-family: 'Onest', sans-serif;
-  font-family: 'Poppins', sans-serif;
+*,
+html,
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-.active{
-    /* background-color: hsla(218, 34%, 14%, 1); */
-    border-radius: 50%;
-    box-shadow: 0 0 16px hsla(207, 90%, 72% , .2);
-  
+.active {
+  border-radius: 50%;
+  box-shadow: 0 0 16px hsla(207, 90%, 72%, 0.2);
 }
 
 nav ul > li {
   padding: 10px;
 }
 
-.head_text_color{
+.head_text_color {
   color: rgb(170 166 195);
 }
 
-.glass{
-    /* From https://css.glass */
-background: hsla(219, 32%, 16%, 0.8);
-backdrop-filter: blur(10px);
--webkit-backdrop-filter: blur(10px);
-border: 1px solid rgba(45, 23, 107, 0.24);
+.glass {
+  /* From https://css.glass */
+  background: hsla(219, 32%, 16%, 0.8);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(45, 23, 107, 0.24);
 }
 
-.text-color{
-  color: #77A9F8;
+.text-color {
+  color: hsl(207, 90%, 72%);
 }
-.secondary-color{
-  background-color: #77A9F8;
+.secondary-color {
+  background-color: hsl(207, 90%, 72%);
 }
-.bg-color{
-  background-color: #0B111E;
+.bg-color {
+  background-color: hsl(219, 48%, 8%);
 }
-.line-gradient{
-  background: rgb(119,169,248);
-background: linear-gradient(180deg, rgba(119, 169, 248, 0.681) 24%, rgba(0,0,0,0) 100%);
+.para-color{
+  color: hsla(219,8%,75%,0.7);
 }
+
 .btn {
+  font-family: inherit;
   background: transparent;
   color: #fff;
-  font-size: 17px;
-  text-transform: uppercase;
-  font-weight: 600;
+  font-size: 18px;
   border: none;
   padding: 15px 20px;
   perspective: 30rem;
@@ -58,7 +53,7 @@ background: linear-gradient(180deg, rgba(119, 169, 248, 0.681) 24%, rgba(0,0,0,0
 }
 
 .btn::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 100%;
@@ -66,14 +61,18 @@ background: linear-gradient(180deg, rgba(119, 169, 248, 0.681) 24%, rgba(0,0,0,0
   top: 0;
   left: 0;
   border-radius: 10px;
-  background: linear-gradient(320deg, rgba(0, 140, 255, 0.678), rgba(128, 0, 128, 0.308));
+  background: linear-gradient(
+    320deg,
+    rgba(0, 140, 255, 0.678),
+    rgba(128, 0, 128, 0.308)
+  );
   z-index: 1;
   transition: background 3s;
 }
 
 .btn:hover::before {
   animation: rotate 1s;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 @keyframes rotate {
@@ -86,92 +85,58 @@ background: linear-gradient(180deg, rgba(119, 169, 248, 0.681) 24%, rgba(0,0,0,0
   }
 }
 
-.mouse {
-  width: 16px;
-  height: 25px;
-  border: 1px solid hsl(207,90%,72%);
-  background-color: transparent;
-  border-radius: 13px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  transform: rotate(-90deg);
-}
-
-.scroll {
-  width: 2px;
-  height: 6px;
-  background-color: hsl(207,90%,72%);
-  border-radius: 2px;
-  position: absolute;
-  bottom: 9px;
-  animation: move_918 1.5s linear infinite;
-}
-
-@keyframes move_918 {
-  0% {
-    bottom: 6px;
-  }
-
-  50% {
-    bottom: 3px;
-  }
-
-  100% {
-    bottom: 6px;
-  }
-}
-
-svg{
+svg {
   display: inline;
 }
 
-.sh{
-  /* box-shadow: 1px -20px 20px 20px #0000009c; */
-  background: rgb(0,0,0);
-/* background: linear-gradient(0deg, rgba(0,0,0,0.9529061624649859) 45%, rgba(0,0,0,0.5971638655462185) 100%); */
-background:  linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #000 100%);
-filter: blur(5px);
+.sh {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #000 100%);
+  filter: blur(5px);
 }
 
-.text-shadow{
-  text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
-  0px -4px 10px rgba(255,255,255,0.3);
+/* .text-shadow {
+  text-shadow: 2px 7px 5px rgba(0, 0, 0, 0.3),
+    0px -4px 10px rgba(255, 255, 255, 0.3);
+} */
 
-}
-
-.cut{
+.cut {
   transform: translateY(-18px);
   transition: transform 200ms;
 }
 
-input[type="text"]:focus ~ .cut, input[type="email"]:focus ~ .cut, textarea:focus ~ .cut , input.has-content ~ .cut , textarea.has-content ~ .cut{
-transform: translateY(0);
+input[type="text"]:focus ~ .cut,
+input[type="email"]:focus ~ .cut,
+textarea:focus ~ .cut,
+input.has-content ~ .cut,
+textarea.has-content ~ .cut {
+  transform: translateY(0);
 }
 
-
- input[type="text"]:focus ~ .nlabel, input[type="email"]:focus ~ .elabel, textarea:focus ~ .qlabel , input.has-content ~ .elabel , input.has-content ~ .nlabel , textarea.has-content ~.qlabel   {
-  transform: translateX(20px)translateY(-18px);
+input[type="text"]:focus ~ .nlabel,
+input[type="email"]:focus ~ .elabel,
+textarea:focus ~ .qlabel,
+input.has-content ~ .elabel,
+input.has-content ~ .nlabel,
+textarea.has-content ~ .qlabel {
+  transform: translateX(20px) translateY(-18px);
   font-size: 0.8rem;
   font-weight: bold;
   color: #fff;
-
 }
-
-
 
 .checkout:hover .arrow {
-  transform: translateX(5px)rotate(90deg);
+  transform: translateX(5px) rotate(90deg);
 }
-
 
 .send-btn {
   font-family: inherit;
   font-size: 18px;
-  background: linear-gradient(320deg, rgba(0, 140, 255, 0.678), rgba(128, 0, 128, 0.308));
+  background: linear-gradient(
+    320deg,
+    rgba(0, 140, 255, 0.678),
+    rgba(128, 0, 128, 0.308)
+  );
   color: white;
   padding: 0.8em 1.2em;
   display: flex;
@@ -226,58 +191,69 @@ transform: translateY(0);
   transform: rotate(45deg);
 }
 
-.bg{
-  background-image: url("../assets/bg3.png");
+.bg {
+  background-image: url("../assets/bg3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 100%;
 }
 
-.header-shadow{
-  background-color: hsl(219,48%,8%);
-  filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+.strip-shadow {
+  background: linear-gradient(
+    320deg,
+    rgba(0, 140, 255, 0.678),
+    rgba(128, 0, 128, 0.308)
+  );
 }
 
-.gradient-box{
-  background-color: #4158D0;
-background-image: linear-gradient(0deg, #4158D0 20%, #C850C0 50%, #FFCC70 74%);
-background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-padding: 2px;
+.gradient-box {
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    0deg,
+    #4158d0 20%,
+    #c850c0 50%,
+    #ffcc70 74%
+  );
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  padding: 2px;
 }
 
-.card-glass{
+.card-glass {
   background-color: rgb(21 16 48);
   background: linear-gradient(to top right, rgb(21 16 48), rgb(58 60 84));
-  background: -webkit-linear-gradient(to top right, rgb(21 16 48), rgba(58,60,84,0.3));
+  background: -webkit-linear-gradient(
+    to top right,
+    rgb(21 16 48),
+    rgba(58, 60, 84, 0.3)
+  );
   color: rgb(151 153 167);
   box-shadow: 0px 10px 20px 2px rgba(0, 119, 255, 0.1);
 }
 
-.read_more_btn{
+.read_more_btn {
   background: transparent;
   color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
   border: none;
-  background: linear-gradient(320deg, rgba(0, 140, 255, 0.678), rgba(128, 0, 128, 0.308));
+  background: linear-gradient(
+    320deg,
+    rgba(0, 140, 255, 0.678),
+    rgba(128, 0, 128, 0.308)
+  );
   perspective: 30rem;
-  border-radius: 5px;
+  border-radius: 10px;
   /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.308); */
 }
 
-
-
-.text-animation{
+.text-animation {
   display: inline;
   width: 0;
   white-space: nowrap; /* Keeps the content on a single line */
   overflow: hidden;
-  border-right: 2px solid yellow;
-  animation: typing 4s steps(32, end) alternate infinite, blink 1s  steps(2) infinite;
+  animation: typing 4s steps(32, end) alternate infinite,
+    blink 1s steps(2) infinite;
 }
-
 
 .Btn {
   border: none;
@@ -287,15 +263,15 @@ padding: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition-duration: .4s;
+  transition-duration: 0.4s;
   cursor: pointer;
-  position: relative;  
-    background: linear-gradient(to right,#434343,#000000);
+  position: relative;
+  background: linear-gradient(to right, #434343, #000000);
   overflow: hidden;
 }
 
 .svgIcon {
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .svgIcon path {
@@ -308,69 +284,70 @@ padding: 2px;
   width: 120px;
   font-weight: 600;
   opacity: 0;
-  transition-duration: .4s;
+  transition-duration: 0.4s;
 }
 
 .Btn:hover {
   width: 110px;
-  transition-duration: .4s;
+  transition-duration: 0.4s;
   border-radius: 30px;
 }
 
 .Btn:hover .text {
   opacity: 1;
-  transition-duration: .4s;
+  transition-duration: 0.4s;
 }
 
 .Btn:hover .svgIcon {
   opacity: 0;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
-.modal_bg{
+.modal_bg {
   /* From https://css.glass */
-background: rgba(21, 16, 48, 0.47);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(6px);
--webkit-backdrop-filter: blur(6px);
-border: 1px solid rgba(21, 16, 48, 0.01);
+  background: rgba(21, 16, 48, 0.47);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 1px solid rgba(21, 16, 48, 0.01);
 }
-
 
 @keyframes blink {
-0%{
-  border-color: transparent;
- }100%{
-  border-color: yellow;
- }
+  0% {
+    border-color: transparent;
+  }
+  100% {
+    border-color: yellow;
+  }
 }
 
 @keyframes typing {
-  0%, 20% { width: 0; }
-  60%, 100% { width: 32ch }
-} 
+  0%,
+  20% {
+    width: 0;
+  }
+  60%,
+  100% {
+    width: 26ch;
+  }
+}
 
-.custom_shadow{
+.custom_shadow {
   box-shadow: 0px 10px 20px 2px rgba(0, 119, 255, 0.1);
 }
 
-.inner_shadow{
-  box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,  
-  100%, 0.075),
-  /* shadow ring 👇 */
-  0 0 0 1px hsla(0, 0%, 0%, 0.05),
-  /* multiple soft shadows 👇 */
-  0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
-  0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
-  0 3.5px 6px hsla(0, 0%, 0%, 0.09);
+.inner_shadow {
+  box-shadow: inset 0 0 0.5px 1px hsla(0, 0%, 100%, 0.075),
+    /* shadow ring 👇 */ 0 0 0 1px hsla(0, 0%, 0%, 0.05),
+    /* multiple soft shadows 👇 */ 0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+    0 0.9px 1.5px hsla(0, 0%, 0%, 0.045), 0 3.5px 6px hsla(0, 0%, 0%, 0.09);
 }
-
 
 .code-loader {
   color: #fff;
   font-family: Consolas, Menlo, Monaco, monospace;
   font-weight: bold;
-  font-size: 100px;
+  font-size: 5rem;
   opacity: 0.8;
 }
 
@@ -390,6 +367,47 @@ border: 1px solid rgba(21, 16, 48, 0.01);
   }
 }
 
-.name_text{
-  text-shadow: 1px 1px rgb(21, 16, 48), -1px -1px #444;
+.clip {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.char {
+  transform: translateY(115px);
+  transition: transform 0.5s;
+}
+
+header {
+  transition: padding 0.3s ease, background-color 0.3s ease;
+}
+
+.header-shadow {
+  position: fixed;
+  background-color: #0b111e;
+  transition: padding 0.3s ease, background-color 0.3s ease;
+  filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
+    drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+}
+
+.htext {
+  transition: display 2s ease;
+}
+
+@media (min-width: 768px) {
+  /* Add your CSS styles here */
+
+  .header-shadow {
+    position: fixed;
+    top: 2px;
+    filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
+      drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+    background: hsla(219, 32%, 16%, 0.8);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(45, 23, 107, 0.24);
+    border-radius: 30px;
+    padding: 0.5rem;
+    width: fit-content;
+    transition: all;
+    transition: padding 0.3s ease, background-color 0.3s ease;
+  }
 }
